# pucoti-tauri

./: .SRCINFO  .gitignore  AUR-README.md  CHANGELOG.md  CLAUDE.md  LICENSE  NEXT-STEPS.md  PKGBUILD  README.md  eslint.config.js  index.html  neutralino.config.json  package-lock.json  package.json  plan.md  pucoti.install  vite.config.ts
.github/workflows/: publish.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
gnome-extension/: install.sh
gnome-extension/pucoti@pucoti.dev/: extension.js  metadata.json  stylesheet.css
scripts/: sync-version.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dbus_service.rs  lib.rs  main.rs
src/components/: AdjustmentPlot.tsx  AdjustmentRecommendation.tsx  ButtonGroup.tsx  CalibrationHeatmap.tsx  CalibrationOverTimeChart.tsx  CalibrationPlot.tsx  ColorPicker.tsx  CommandPalette.tsx  CountdownDisplay.tsx  DesktopOnly.tsx  DurationBucketChart.tsx  EstimationHistogram.tsx  Kbd.tsx  MedianRangeCard.tsx  MiniTimer.tsx  ModeTabButton.tsx  Navbar.tsx  NotableSessions.tsx  RadioGroup.tsx  SessionTable.tsx  Spinner.tsx  StatCard.tsx  StatusBadge.tsx  TimeRangeFilter.tsx  UpdateBanner.tsx  ValidatedNumericInput.tsx  plots.tsx
src/context/: AppContext.tsx  SettingsContext.tsx
src/hooks/: useBellSubscriber.ts  useDbusSubscriber.ts  useDbusSync.ts  useSessions.ts  useStats.ts  useStorageSubscriber.ts  useTimerEngine.ts  useTimerState.ts  useWindowSubscriber.ts
src/lib/: colors.ts  command-parser.test.ts  (+24 more)
(+41 files in other folders)
