[package]
name = "pucoti"
version = "1.1.2"
description = "A timer to stay on track and make predictions to overcome the planning fallacy."
authors = ["Diego Dorn"]
license = "MIT"
repository = "https://github.com/ddorn/pucoti-tauri"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
keywords = ["timer", "productivity", "tauri", "desktop-app", "time-tracking"]
default-run = "pucoti"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pucoti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pucoti"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rodio = { version = "0.19", features = ["mp3"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
